@@ -1,3 +1,8 @@
+2004-10-10  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (::tkcon::Highlight): use ctext for the 'edit' dialog
+	if available
+
 2004-07-26  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	**** TKCON 2.4 TAGGED FOR RELEASE ****
